--- a/_layouts/card_display.html
+++ b/_layouts/card_display.html
@@ -45,8 +45,8 @@
             const cardDiv = document.createElement('div');
             cardDiv.classList.add('card');
             cardDiv.innerHTML = `
-              <h3>${card.Title}</h3>
-              <p>${card.Description}</p>
+              <h3>${card.title}</h3>
+              <p>${card.description}</p>
             `;
             categoryDiv.appendChild(cardDiv);
           });
