--- a/_layouts/card_display.html
+++ b/_layouts/card_display.html
@@ -4,24 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
-  <style>
-    /* Basic styling for the card display */
-    .card {
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      padding: 10px;
-      margin: 10px;
-      width: 200px;
-      background-color: #f9f9f9;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    h2 {
-      margin-top: 0;
-    }
-    p {
-      margin-bottom: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="{{ site.baseurl }}/card_styles.css">
 </head>
 <body>
   <div id="cardDisplay">
