--- a/_layouts/card_display.html
+++ b/_layouts/card_display.html
@@ -27,6 +27,7 @@
           cardsInCategory.forEach(card => {
             const cardDiv = document.createElement('div');
             cardDiv.classList.add('card');
+            cardDiv.classList.add(category);
             cardDiv.innerHTML = `
               <h3>${card.title}</h3>
               <p>${card.description}</p>
