--- a/card_styles.css
+++ b/card_styles.css
@@ -63,6 +63,10 @@
   background-color: #FFA500; /* Orange */
 }
 
+.category {
+  float: left
+}
+
 /* card_styles.css */
 .card {
   border: 1px solid #ccc;
